ffi/include/kawaiifi.h

typedef struct Interface Interface;
typedef struct Bss Bss;
typedef enum CwSecurity CwSecurity;
typedef int32_t CwSecurity;
typedef enum CwPhyMode CwPhyMode;
typedef int32_t CwPhyMode;
typedef enum CwInterfaceMode CwInterfaceMode;
typedef int32_t CwInterfaceMode;
/**
 * Frees a string returned by any kawaiifi function.
 */
void kawaiifi_string_free(char *s);
/**
 * Returns the interface name as a C string, or null if `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_name(const struct Interface *interface);
/**
 * Returns the SSID as a C string, or null if not associated or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_ssid(const struct Interface *interface);
/**
 * Returns the noise measurement in dBm.
 * Returns 0 if bss is null.
 */
int32_t kawaiifi_bss_noise_dbm(const struct Bss *bss);
/**
 * Returns the BSD name of the Wi-Fi interface as a C string, or null if unavailable or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_name(const struct Interface *interface);
/**
 * Returns the current security type.
 * Returns `Unknown` if `interface` is null.
 */
CwSecurity kawaiifi_interface_security(const struct Interface *interface);
/**
 * Returns the currently active PHY mode.
 * Returns `None` if `interface` is null.
 */
CwPhyMode kawaiifi_interface_active_phy_mode(const struct Interface *interface);
/**
 * Returns the current operating mode.
 * Returns `None` if `interface` is null.
 */
CwInterfaceMode kawaiifi_interface_mode(const struct Interface *interface);
/**
 * Returns the hardware MAC address as a C string, or null if unavailable or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_hardware_address(const struct Interface *interface);
/**
 * Returns the SSID as a C string, or null if unavailable, not associated, or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_ssid(const struct Interface *interface);
/**
 * Writes the 6-byte current BSSID into `out`.
 * Returns false if unavailable, not associated, `interface` is null, or `out` is null.
 */
bool kawaiifi_interface_bssid(const struct Interface *interface, uint8_t *out);
/**
 * Returns true if the Wi-Fi interface is powered on.
 */
bool kawaiifi_interface_power_on(const struct Interface *interface);
/**
 * Returns the current transmit rate in Mbps.
 * Returns 0 if `interface` is null.
 */
double kawaiifi_interface_transmit_rate_mbps(const struct Interface *interface);
/**
 * Returns the current transmit power in mW.
 * Returns 0 if `interface` is null.
 */
int32_t kawaiifi_interface_transmit_power_mw(const struct Interface *interface);
/**
 * Returns the current signal strength in dBm.
 * Returns 0 if `interface` is null.
 */
int32_t kawaiifi_interface_signal_dbm(const struct Interface *interface);
/**
 * Returns the current noise in dBm.
 * Returns 0 if `interface` is null.
 */
int32_t kawaiifi_interface_noise_dbm(const struct Interface *interface);
/**
 * Returns the currently adopted country code as a C string, or null if unavailable or `interface` is null.
 * The caller must free the returned string with `kawaiifi_string_free`.
 */
char *kawaiifi_interface_country_code(const struct Interface *interface);
/**
 * Returns true if the network service is active.
 */
bool kawaiifi_interface_service_active(const struct Interface *interface);