ffi/include/NativeMethods.MacOS.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    internal static unsafe partial class NativeMethodsMacOS
    {
        const string __DllName = "kawaiifi";





        /// <summary>
        ///  Returns the noise measurement in dBm.
        ///  Returns 0 if bss is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_bss_noise_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int kawaiifi_bss_noise_dbm(Bss* bss);

        /// <summary>
        ///  Returns the BSD name of the Wi-Fi interface as a C string, or null if unavailable or `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_name(Interface* @interface);

        /// <summary>
        ///  Returns the current security type.
        ///  Returns `Unknown` if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_security", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern CwSecurity kawaiifi_interface_security(Interface* @interface);

        /// <summary>
        ///  Returns the currently active PHY mode.
        ///  Returns `None` if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_active_phy_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern CwPhyMode kawaiifi_interface_active_phy_mode(Interface* @interface);

        /// <summary>
        ///  Returns the current operating mode.
        ///  Returns `None` if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_mode", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern CwInterfaceMode kawaiifi_interface_mode(Interface* @interface);

        /// <summary>
        ///  Returns the hardware MAC address as a C string, or null if unavailable or `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_hardware_address", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_hardware_address(Interface* @interface);

        /// <summary>
        ///  Returns the SSID as a C string, or null if unavailable, not associated, or `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_ssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_ssid(Interface* @interface);

        /// <summary>
        ///  Writes the 6-byte current BSSID into `out`.
        ///  Returns false if unavailable, not associated, `interface` is null, or `out` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_bssid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_bssid(Interface* @interface, byte* @out);

        /// <summary>
        ///  Returns true if the Wi-Fi interface is powered on.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_power_on", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_power_on(Interface* @interface);

        /// <summary>
        ///  Returns the current transmit rate in Mbps.
        ///  Returns 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_transmit_rate_mbps", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double kawaiifi_interface_transmit_rate_mbps(Interface* @interface);

        /// <summary>
        ///  Returns the current transmit power in mW.
        ///  Returns 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_transmit_power_mw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int kawaiifi_interface_transmit_power_mw(Interface* @interface);

        /// <summary>
        ///  Returns the current signal strength in dBm.
        ///  Returns 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_signal_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int kawaiifi_interface_signal_dbm(Interface* @interface);

        /// <summary>
        ///  Returns the current noise in dBm.
        ///  Returns 0 if `interface` is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_noise_dbm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int kawaiifi_interface_noise_dbm(Interface* @interface);

        /// <summary>
        ///  Returns the currently adopted country code as a C string, or null if unavailable or `interface` is null.
        ///  The caller must free the returned string with `kawaiifi_string_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_country_code", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* kawaiifi_interface_country_code(Interface* @interface);

        /// <summary>
        ///  Returns true if the network service is active.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "kawaiifi_interface_service_active", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool kawaiifi_interface_service_active(Interface* @interface);


    }


    /// <summary>
    ///  FFI-safe equivalent of CoreWLAN's CWPHYMode.
    /// </summary>
    internal enum CwPhyMode : int
    {
        /// <summary>
        ///  No active PHY mode.
        /// </summary>
        None = 0,
        /// <summary>
        ///  802.11a.
        /// </summary>
        A = 1,
        /// <summary>
        ///  802.11b.
        /// </summary>
        B = 2,
        /// <summary>
        ///  802.11g.
        /// </summary>
        G = 3,
        /// <summary>
        ///  802.11n.
        /// </summary>
        N = 4,
        /// <summary>
        ///  802.11ac.
        /// </summary>
        AC = 5,
        /// <summary>
        ///  802.11ax.
        /// </summary>
        AX = 6,
    }

    /// <summary>
    ///  FFI-safe equivalent of CoreWLAN's CWSecurity.
    /// </summary>
    internal enum CwSecurity : int
    {
        /// <summary>
        ///  No security.
        /// </summary>
        None = 0,
        /// <summary>
        ///  WEP security.
        /// </summary>
        Wep = 1,
        /// <summary>
        ///  WPA Personal security.
        /// </summary>
        WpaPersonal = 2,
        /// <summary>
        ///  Mixed WPA Personal security.
        /// </summary>
        WpaPersonalMixed = 3,
        /// <summary>
        ///  WPA2 Personal security.
        /// </summary>
        Wpa2Personal = 4,
        /// <summary>
        ///  Personal security.
        /// </summary>
        Personal = 5,
        /// <summary>
        ///  Dynamic WEP security.
        /// </summary>
        DynamicWep = 6,
        /// <summary>
        ///  WPA Enterprise security.
        /// </summary>
        WpaEnterprise = 7,
        /// <summary>
        ///  Mixed WPA Enterprise security.
        /// </summary>
        WpaEnterpriseMixed = 8,
        /// <summary>
        ///  WPA2 Enterprise security.
        /// </summary>
        Wpa2Enterprise = 9,
        /// <summary>
        ///  Enterprise security.
        /// </summary>
        Enterprise = 10,
        /// <summary>
        ///  WPA3 Personal security.
        /// </summary>
        Wpa3Personal = 11,
        /// <summary>
        ///  WPA3 Enterprise security.
        /// </summary>
        Wpa3Enterprise = 12,
        /// <summary>
        ///  WPA3 transition security.
        /// </summary>
        Wpa3Transition = 13,
        /// <summary>
        ///  Opportunistic Wireless Encryption security.
        /// </summary>
        Owe = 14,
        /// <summary>
        ///  Opportunistic Wireless Encryption transition security.
        /// </summary>
        OweTransition = 15,
        /// <summary>
        ///  Unknown security type.
        /// </summary>
        Unknown = -1,
    }

    /// <summary>
    ///  FFI-safe equivalent of CoreWLAN's CWInterfaceMode.
    /// </summary>
    internal enum CwInterfaceMode : int
    {
        /// <summary>
        ///  No interface mode.
        /// </summary>
        None = 0,
        /// <summary>
        ///  Station/client mode.
        /// </summary>
        Station = 1,
        /// <summary>
        ///  IBSS/ad-hoc mode.
        /// </summary>
        Ibss = 2,
        /// <summary>
        ///  Host access point mode.
        /// </summary>
        HostAp = 3,
    }


}
